=== Desk Mess Mirrored ===
== Version 2.0 ==
Changelog: December 12, 2011
= Code =
* Added additional PHPDoc style documentation
* Added `DMM WP Title` - utilizes the `wp_title` filter to add text to the default title output
* Added `DMM Use Posted` function for posts without titles
* Added minimal doc-block to each template file as relevant
* Added 'desk-mess-mirrored' loop template
* Added 'dmm-navigation' and implemented in 404, index, archive, and author template files
* Added post-formats: aside, quote, and status
* Added clearing `div` at top of 'author' and 'page' templates
* Added project TODO section to 'index.php'
* Changed `BNS Theme Version` to `DMM Theme Version` with extensive re-writes to text displayed
* Changed `my_theme_data` to `active_theme_data` in `DMM Theme Version`
* Changed post navigation test to 'Older posts' and 'Newer posts' replacing 'Previous entries' and 'Next entries' respectively
* Implemented 'desk-mess-mirrored' loop in 404, archive, author, index (home, front-page), page, single templates
* Re-defined each widget area separately to allow for descriptions to show end-user more details about each area
* Removed 'Home" link code from `dmm_list_pages`
* Removed unused images (from IE6 support)
* Renamed `BNS Dynamic Copyright` to `DMM Dynamic Copyright` (refactored changelog)
* Renamed `BNS Modified Post` to `DMM Modified Post` (refactored changelog)
* Replaced TEMPLATEPATH constant with `get_template_directory_uri`
* Rewrote class used in 'author' template to add author role as a class element
* Updated documentation to clarify `DMM Dynamic Copyright` parameters
* Updated 'readme.txt' information - NB: All open and new TODO items will be found in their appropriate file going forward from this version

= CSS =
* Added some minor style to forms
* Added 'Order of Contents' reference to the stylesheet with minor re-organization