@@ -1,6 +1,6 @@
 === Desk Mess Mirrored ===
 == Version 2.0 ==
-Changelog: December 12, 2011
+Changelog: December 20, 2011
 = Code =
 * Added additional PHPDoc style documentation
 * Added `DMM WP Title` - utilizes the `wp_title` filter to add text to the default title output
@@ -26,13 +26,14 @@ Changelog: December 12, 2011
 * Updated 'readme.txt' information - NB: All open and new TODO items will be found in their appropriate file going forward from this version
 
 = CSS =
-* Added some minor style to forms
 * Added 'Order of Contents' reference to the stylesheet with minor re-organization
 * Changed bottom of post to have smaller separating margin and added a bottom border to better delineate posts
+* Changed base font-size to 100% and adjust all other font-sizes to be at a comparable percentage.
 * Removed the right and bottom borders from the gallery images; and added additional elements to handle galleries up to 10 columns wide
 * Removed (using comments) `background property` from `code` element
 * Removed margins from a blockquote if it is within another blockquote
 * Reorganized stylesheet and added 'Order of Contents' section for reference
+* Updated forms and search widget styles
 
 = Internet Browsers Reviewed =
 * Apple Safari v5.1.2 (Mac)
